--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                 <div class="buttons">
                     <div class="group">
                         <button class="info on">On</button>
-                        <button class="comments off">Off</button>
+                        <button class="comments on">On</button>
                     </div>
                     <button class="upload">Upload designs</button>
                 </div>
