--- a/templates/index.html
+++ b/templates/index.html
@@ -264,7 +264,7 @@
                         <textarea id="comment"></textarea>
                     </fieldset>
                     <div class="buttons">
-                        <button type="cancel">cancel</button>
+                        <button type="cancel" id="comment-cancel">cancel</button>
                         <button type="submit">Submit</button>
                     </div>
                 </form>
