--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
 	                  <div class="annotationId"><span>${version}</span></div> 
 	                  <div class="information"> ${text} </div> 
 	                  <footer> 
-	                      <div class="buttons"> 
-	                          <a class="reply" href="">Reply</a> 
-	                          <a href="">Add to tasks</a> 
-	                      </div> 
+                     <div class="buttons">
+                        <a class="create" href="">Create a todo</a>
+                        <a class="reply" href="">Reply</a>
+                      </div>
 	                  </footer> 
 	                  </div> 
 	              </article> 
@@ -53,11 +53,11 @@
             <div id="toolbar">
                 <a href="#"><span>V3</span></a>
                 <ul id="versionHistory" class="dropdown">
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">One</a></li>
-                    <li><a href="#">One</a></li>
+                    <li><a href="#">V1</a></li>
+                    <li><a href="#">V2</a></li>
+                    <li><a href="#">V3</a></li>
+                    <li><a href="#">V4</a></li>
+                    <li><a href="#">V5</a></li>
                 </ul>
                 <ul id="screens">
                     <li><a href="">Homepage</a></li>
