Added title to regions. added other stuff.

--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
                     </fieldset>
                     <div class="buttons">
                         <button type="cancel" id="comment-cancel">cancel</button>
-                        <button type="submit">Submit</button>
+                        <button type="submit" id="comment-submit">Submit</button>
                     </div>
                 </form>
             </div>
