--- a/static/css/common.css
+++ b/static/css/common.css
@@ -30,18 +30,21 @@ button.comments {
 }
 
 #toolbar button.info,
+#toolbar button.comments,
+#toolbar button.upload {
+    -webkit-transition: background-color 0.2s linear;
+}
+
 #toolbar button.info.on {
     background-color: #fff;
     background-position: 3px 2px;
 }
 
-#toolbar button.comments,
 #toolbar button.comments.on {
     background-color: #fff;
     background-position: 3px -147px
 }
 
-#toolbar button.upload,
 #toolbar button.upload.on {
     background-color: #fff;
     background-position: 3px -298px;
@@ -137,10 +140,14 @@ button.comments.off {
     float: right;
 }
 
+#tasks-done {
+    display: none;
+}
+
 .dropdown,
-#tasks-done,
 #tasks time,
-#tasks header ul {
+#tasks header ul,
+#versionHistory {
     display: none;
     position: absolute;
 }
@@ -239,19 +246,27 @@ button.comments.off {
 
 #versionHistory {
     position: absolute;
+    opacity: 0;
     width: 45px;
-    display: block;
     z-index: 2;
     top: 36px;
     box-shadow: 2px 2px 5px 2px rgba(0,0,0,0.6);
 }
 
+#versionHistory.on {
+    opacity: 1;
+    display: block;
+}
 #versionHistory li,
 #versionHistory a {
     display: block;
     width: 100%;
     height: 23px;
     text-align: center;
+}
+
+#versionHistory a.on {
+    text-decoration: underline;
 }
 
 #versionHistory a:link,
@@ -284,11 +299,12 @@ button.comments.off {
     margin-right: 20px;
     min-height: 26px;
     padding: 10px 5px 0 5px;
+    -webkit-transition: background-color 0.2s linear;
 }
 
 #screens li a:hover {
-    background-color: rgba(0,0,0,0.1);
-    text-shadow: 1px 1px 1px rgba(255,255,255, 0.8);
+    background-color: rgba(0,0,0,0.2);
+    /*text-shadow: 1px 1px 1px rgba(255,255,255, 0.8);*/
 }
 
 #screens li a:active {
@@ -313,11 +329,15 @@ button.comments.off {
     width: 253px;
 }
 
+#tasks > div.group {
+    -webkit-transitions: position 0.5s linear;
+    position: relative;
+}
+
 #tasks > a {
     display: block;
     width: 10px;
     height: 50px;
-
 }
 
 #tasks header {
@@ -485,6 +505,7 @@ button.comments.off {
 }
 
 #annotations article footer .buttons .create {
+    -webkit-transitions: color 0.1s linear;
     display: inline-block;
     background: url(/static/images/sprite_icons.png) no-repeat -3px -601px;
     padding-left: 23px;
@@ -493,6 +514,7 @@ button.comments.off {
 }
 
 #annotations article footer .buttons .reply {
+    -webkit-transitions: color 0.1s linear;
     display: inline-block;
     background: url(/static/images/sprite_icons.png) no-repeat -3px -701px;
     padding-left: 23px;
