--- a/templates/index.html
+++ b/templates/index.html
@@ -266,7 +266,7 @@
                 <header>
                     <h1>Comment</h1>
                 </header>
-                <form id="comment-submit" name="" action="" method="">
+                <form name="comment-submit" action="#" method="get">
                     <fieldset>
                         <legend>Comment</legend>
                         <label for="comment">Comment</label>
