--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 	          </div> 
 		</script>
     </head>
-    <body>
+    <body data-user-type="designer">
 		{% if current_version %}
 		     <div id="page" data-revision="{{ current_version }}">
 		{% else %}
