--- a/templates/index.html
+++ b/templates/index.html
@@ -301,6 +301,23 @@
                     </div>
                 </form>
             </div>
+            <div class="dialog addTodo">
+                <header>
+                    <h1>Todo</h1>
+                </header>
+                <form id="" name="" action="" method="">
+                    <fieldset>
+                        <legend>Todo</legend>
+                        <label for="explain">Todo</label>
+                        <textarea id="explain"></textarea>
+                    </fieldset>
+                    <div class="buttons">
+                        <button type="cancel">cancel</button>
+                        <button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+
             <div class="dialog dragFile">
                 <header>
                     <h1>Upload Files</h1>
