added the javascript for todo

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
                             <fieldset>
                                 <legend></legend>
-                                <input type="checkbox" name="" id="" value="" />
+                                <input type="checkbox" name="" id="" value="" checked="checked"/>
                                 <label for="">Resolved</label>
                             </fieldset>
                         </section>
@@ -187,7 +187,7 @@
                             <fieldset>
                                 <legend></legend>
                                 <input type="checkbox" name="" id="" value="" />
-                                <label for="">Resolved</label>
+                                <label for="" checked="checked">Resolved</label>
                             </fieldset>
                         </section>
                         </article>
