--- a/templates/index.html
+++ b/templates/index.html
@@ -316,7 +316,7 @@
                     </div>
                 </form>
             </div>
-            <div class="dialog addTodo">
+            <!--div class="dialog addTodo">
                 <header>
                     <h1>Todo</h1>
                 </header>
@@ -331,7 +331,7 @@
                         <button type="submit">Submit</button>
                     </div>
                 </form>
-            </div>
+            </div-->
 
             <div class="dialog dragFile">
                 <header>
