fucking around with the version history dropdown

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,11 +69,11 @@
                     {% endfor %}
                 </ul>
                 <ul id="screens">
-                    <li><a href="">Homepage</a></li>
-                    <li><a href="">Registration</a></li>
-                    <li><a href="">Login</a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Sitemap</a></li>
+                    <li><a href="">A</a></li>
+                    <li><a href="">B</a></li>
+                    <li><a href="">C</a></li>
+                    <li><a href="">D</a></li>
+                    <li><a href="">E</a></li>
                 </ul>
                 <div class="buttons">
                     <div class="group">
