--- a/static/css/common.css
+++ b/static/css/common.css
@@ -139,7 +139,6 @@ button.comments {
 
 #tasks time,
 #tasks header ul,
-#versionHistory,
 #projects {
     display: none;
     position: absolute;
@@ -190,8 +189,9 @@ button.comments {
 #productHeader {
     min-height: 26px;
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#24375D), to(#242546));
-    margin-bottom: 1px;
-    padding-top: 10px;
+    padding: 10px 0 0 6px;
+    position: relative;
+    z-index: 3;
 }
 
 #productHeader p,
@@ -235,6 +235,7 @@ button.comments {
     box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.6);
     background-color: #333;
     background-image: -webkit-gradient(linear, 0% 0%, 0% 20%, from(#9d9d9d), to(#cccccc));
+    padding-left: 10px;
 
 }
 
@@ -243,12 +244,12 @@ button.comments {
     color: #666;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 0px;
     font-size: 1.5625em;
     background: url(/static/images/toolbar.png) no-repeat left top;
     width: 90px;
     height: 36px;
-    padding: 5px 0 0 5px;
+    padding: 5px 0 0 10px;
 }
 
 #toolbar .buttons {
@@ -268,22 +269,24 @@ button.comments {
     text-transform: uppercase;
 }
 
-#versionHistory {
-    text-transform: uppercase;
-    position: absolute;
-    opacity: 0;
-    width: 45px;
-    z-index: 2;
-    bottom: 0;
-    box-shadow: 2px 2px 5px 2px rgba(0,0,0,0.6);
-    -webkit-transition: top 0.5s linear;
+#toolbar #toggleVersionHistory.on,
+#toolbar #toggleVersionHistory:hover {
+    overflow: hidden;
+    background: url(/static/images/version_arrows.png) no-repeat 10px 5px, url(/static/images/toolbar.png) no-repeat left top;
+    text-indent: -9999px;
 }
 
-#versionHistory.on {
-    opacity: 1;
-    display: block;
-    top: 36px;
+#versionHistory {
+    left: 0;
+    text-transform: uppercase;
+    position: absolute;
+    width: 45px;
+    z-index: 2;
+    bottom: 0; 
+    box-shadow: 2px 2px 5px 2px rgba(0,0,0,0.6);
+    -webkit-transition: bottom 0.1s linear;
 }
+
 #versionHistory li,
 #versionHistory a {
     display: block;
@@ -310,10 +313,16 @@ button.comments {
     border-bottom: 1px dotted #666;
     overflow-y: hidden;
     box-shadow: 2px 2px 5px 2px rgba(0,0,0,0.6);
-    -webkit-transition: margin 0.1s linear;
+    -webkit-transition: margin, color, background-color 0.2s linear;
+}
+
+#versionHistory a:last-child {
+    border-bottom: 0;
 }
 
 #versionHistory a:hover {
+    background-color: #999;
+    color: #FFF;
     margin-left: 3px;
 }
 
