--- a/templates/index.html
+++ b/templates/index.html
@@ -347,7 +347,9 @@
 		uploader("page");
 		var overlayer = imageOverlays("design");
 		overlayer.loadImage("/static/images/mockup.png");
-	 </script>
+	</script>
+	<div style="display:none" id="user-name">{{ username }}</div>
+	<div style="display:none" id="display-name">{{ displayname }}</div>
     </body>
 </html>
 
