Tweaking the dialogs

--- a/templates/index.html
+++ b/templates/index.html
@@ -333,7 +333,7 @@
                 </form>
             </div-->
 
-            <div class="dialog dragFile">
+            <div class="dialog dragFile" id="drag-dialog">
                 <header>
                     <h1>Upload Files</h1>
                 </header>
