something for those things

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 	                      <h1>${name}</h1> 
 	                  </header> 
 	                  <div class="group"> 
-	                  <div class="annotationId"><span>${version}</span></div> 
+	                  <div class="annotationId" data-version-id="${version}"><span>${version}</span></div> 
 	                  <div class="information"> ${text} </div> 
 	                  <footer> 
                      <div class="buttons">
