--- a/templates/index.html
+++ b/templates/index.html
@@ -194,7 +194,7 @@
                     </form>
                 </div>
                 </div>
-                <a href="#">&gt;</a>
+                <a href="#"></a>
             </aside>
         </div>
         <div id="annotations">
