--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 	                  <div class="information"> ${text} </div> 
 	                  <footer> 
                      <div class="buttons">
-                        <a class="create" href="">Create a todo</a>
+                        <a class="create" href="">Create a To Do</a>
                         <a class="reply" href="">Reply</a>
                       </div>
 	                  </footer> 
@@ -211,7 +211,7 @@
                         <footer>
                             <div class="buttons">
 
-                                <a class="create" href="">Create a todo</a>
+                                <a class="create" href="">Create a To Do</a>
                                 <a class="reply" href="">Reply</a>
                             </div>
                         </footer>
@@ -228,7 +228,7 @@
                             <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                             <footer>
                                 <div class="buttons">
-                                    <a class="create" href="">Create a todo</a>
+                                    <a class="create" href="">Create a To Do</a>
                                     <a class="reply" href="">Reply</a>                              
                                 </div>
                             </footer>
@@ -247,7 +247,7 @@
                             <footer>
                                 <div class="buttons">
 
-                                <a class="create" href="">Create a todo</a>
+                                <a class="create" href="">Create a To Do</a>
                                 <a class="reply" href="">Reply</a>
 
                                 </div>
@@ -268,7 +268,7 @@
                         <footer>
                             <div class="buttons">
 
-                                <a class="create" href="">Create a todo</a>
+                                <a class="create" href="">Create a To Do</a>
                                 <a class="reply" href="">Reply</a>
 
                             </div>
