added upload to drag

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                 {% if current_version %}
 				 <a href="#" id="toggleVersionHistory">{{ current_version }}</a>
 				{% else %}
-				    <a href="#" id="toggleVersionHistory">>V1</a>
+				    <a href="#" id="toggleVersionHistory">V1</a>
 				{% endif %}
                 <ul id="versionHistory">
 					{% for rev in revisions %}
